New ruby parsing rule breaks some real web sites. https://bugs.webkit.org/show_bug.cgi?id=136062

Patch by Yuki Sekiguchi <yuki.sekiguchi@access-company.com> on 2014-08-21
Reviewed by Ryosuke Niwa.

Source/WebCore:

An RP element should not auto close an RTC element.

The HTML5.1 spec was changed:
http://www.w3.org/html/wg/drafts/html/master/syntax.html#parsing-main-inbody
This was done at the following commit:
https://github.com/w3c/html/commit/c61397b989b28235ee2228f280aa8d475f3b9ebf

This patch changed the RP element's behavior to follow the spec change.

Test: fast/ruby/rp-inside-rtc.html

* html/parser/HTMLTreeBuilder.cpp:
(WebCore::HTMLTreeBuilder::processStartTagForInBody):

LayoutTests:

html5lib-test was updated using my pull request:
https://github.com/darobin/html5lib-tests/pull/2

* fast/ruby/rp-inside-rtc-expected.html: Added.
* fast/ruby/rp-inside-rtc.html: Added.
* html5lib/resources/ruby.dat: The rp element should not auto close the rtc element.

Canonical link: https://commits.webkit.org/153970@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172834 268f45cc-cd09-0410-ab3c-d52691b4dbfc